feat: enhance UserController with additional user management features and improve changelog generation